--- a/auctions/templates/auctions/auction_details.html
+++ b/auctions/templates/auctions/auction_details.html
@@ -49,7 +49,7 @@
 
         .btn {
             display: block;
-            width: 100%;
+            /* width: 100%; */
             background-color: #007BFF;
             color: white;
             border: none;
@@ -83,6 +83,9 @@
             background-color: #f8d7da;
             color: #721c24;
         }
+        .danger{
+            background-color: rgb(211, 46, 46);
+        }
     </style>
     <link rel="stylesheet" href="../../static/common.css">
 </head>
@@ -107,20 +110,35 @@
             {% endif %}
         </div>
 
+        <!-- Messages -->
         <div class="messages">
             {% for message in messages %}
                 <p class="{{ message.tags }}">{{ message }}</p>
             {% endfor %}
         </div>
 
-        <form method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="bid_amount">Enter your bid amount:</label>
-                <input type="number" id="bid_amount" name="bid_amount" min="0.01" step="0.01" required>
-            </div>
-            <button type="submit" class="btn">Place Bid</button>
-        </form>
+        {% if user.usertype == 'admin' %}
+            <form method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <button  type="submit" name="delete_auction" class="btn danger">Delete Auction</button>
+                </div>
+            </form>
+        {% else %}
+            <!-- Bidding Form for Buyers -->
+            {% if not auction_ended %}
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="bid_amount">Enter your bid amount:</label>
+                        <input type="number" id="bid_amount" name="bid_amount" min="0.01" step="0.01" required>
+                    </div>
+                    <button type="submit" class="btn">Place Bid</button>
+                </form>
+            {% else %}
+                <p style="color: red; text-align: center;">This auction has ended. You cannot place a bid.</p>
+            {% endif %}
+        {% endif %}
     </div>
     <a style="margin: auto;width: fit-content;padding: 10px;margin: auto;margin-bottom: 50px;" class="btn" href="{% url 'home' %}">back</a>
     <script src="../../static/common.js"></script>
