--- a/users/templates/pages/home.html
+++ b/users/templates/pages/home.html
@@ -33,8 +33,8 @@
         }
 
         .navbar .logo img {
-            width: 40px;
-            height: 40px;
+            width: 200px;
+            height: 50px;
             margin-right: 10px;
         }
 
@@ -199,8 +199,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="logo">
-            <img src="your-logo-url-here.png" alt="Logo">
-            <h1>Auction Site</h1>
+            <h1>Online Auction</h1>
         </div>
         <div class="user-section">
             {% if user.is_authenticated %}
