--- a/users/templates/pages/auctions_oversight.html
+++ b/users/templates/pages/auctions_oversight.html
@@ -14,7 +14,40 @@
             gap: 50px;
             
         }
+        /* Navbar Styles */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
 
+        .navbar .logo {
+            display: flex;
+            align-items: center;
+        }
+        .navbar .user-section {
+            position: relative;
+        }
+        .navbar .user-section .avatar {
+            background-color: #ffffff;
+            color: #007BFF;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 1.2rem;
+            text-transform: uppercase;
+        }
         .container {
             width: 80%;
             margin: 0 auto;
@@ -57,7 +90,7 @@
 
         .seller-link {
             text-decoration: none;
-            color: #007BFF;
+            color: white;
             font-size: 14px;
             margin-left: 10px;
         }
@@ -76,10 +109,21 @@
             background-color: #b02a37;
         }
     </style>
-    <link rel="stylesheet" href="../../static/common.css">
+    
 </head>
 <body>
-    <div id="navbar"></div>
+    <div class="navbar">
+        <div class="logo">
+            <h1>Online Auction</h1>
+        </div>
+        <div class="user-section">
+            {% if user.is_authenticated %}
+                <div id="avatar" class="avatar">
+                    {{ user.username|slice:":1" }}
+                </div>
+            {% endif %}
+        </div>        
+    </div>
     <div class="container">
         <h1>Auctions Oversight</h1>
         {% for auction in auctions %}
@@ -100,6 +144,5 @@
         {% endfor %}
     </div>
     <a style="margin: auto;width: fit-content;padding: 10px;margin: auto;margin-bottom: 50px;" class="btn" href="{% url 'home' %}">back</a>
-    <script src="../../static/common.js"></script>
 </body>
 </html>
