--- a/users/templates/pages/manage_users.html
+++ b/users/templates/pages/manage_users.html
@@ -11,12 +11,60 @@
             display: flex;
             flex-direction: column;
             gap: 50px;
-            /* justify-content: center; */
-            /* align-items: center; */
             padding: 0;
             margin: 0;
         }
+        /* Navbar Styles */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
 
+        .navbar .logo {
+            display: flex;
+            align-items: center;
+        }
+        .navbar .user-section {
+            position: relative;
+        }
+        .btn {
+            display: block;
+            
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+
+        .navbar .user-section .avatar {
+            background-color: #ffffff;
+            color: #007BFF;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 1.2rem;
+            text-transform: uppercase;
+        }
         .container {
             width: 80%;
             margin: 30px auto;
@@ -65,11 +113,22 @@
             border-radius: 5px;
         }
     </style>
-    <link rel="stylesheet" href="../../../auctions/static/common.css">
+    
 
 </head>
 <body>
-    <div id="navbar"></div>
+    <div class="navbar">
+        <div class="logo">
+            <h1>Online Auction</h1>
+        </div>
+        <div class="user-section">
+            {% if user.is_authenticated %}
+                <div id="avatar" class="avatar">
+                    {{ user.username|slice:":1" }}
+                </div>
+            {% endif %}
+        </div>        
+    </div>
     <div class="container">
         <h1>Manage Users</h1>
         {% for user in users %}
@@ -83,6 +142,6 @@
         {% endfor %}
     </div>
     <a style="margin: auto;width: fit-content;padding: 10px;margin: auto;margin-bottom: 50px;" class="btn" href="{% url 'home' %}">back</a>
-    <script src="../../static/common.js" class="btn"></script>
+    
 </body>
 </html>
