--- a/users/templates/users/user_details.html
+++ b/users/templates/users/user_details.html
@@ -14,7 +14,40 @@
             margin: 0;
             padding: 0;
         }
+        /* Navbar Styles */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
 
+        .navbar .logo {
+            display: flex;
+            align-items: center;
+        }
+        .navbar .user-section {
+            position: relative;
+        }
+        .navbar .user-section .avatar {
+            background-color: #ffffff;
+            color: #007BFF;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 1.2rem;
+            text-transform: uppercase;
+        }
         .container {
         width: 80%;
             margin: 30px auto;
@@ -64,11 +97,22 @@
             cursor: not-allowed;
         }
     </style>
-    <link rel="stylesheet" href="../../../auctions/static/common.css">
+    
 
 </head>
 <body>
-    <div id="navbar"></div>
+    <div class="navbar">
+        <div class="logo">
+            <h1>Online Auction</h1>
+        </div>
+        <div class="user-section">
+            {% if user.is_authenticated %}
+                <div id="avatar" class="avatar">
+                    {{ user.username|slice:":1" }}
+                </div>
+            {% endif %}
+        </div>        
+    </div>
     <div class="container">
         <div class="user-info">
             <h1>{{ user.username }}</h1>
@@ -111,6 +155,6 @@
         </form>
         <a href="{% url 'manage_users' %}" class="btn">Go Back</a>
     </div>
-    <script src="../../../auctions/static/common.js"></script>
+    
 </body>
 </html>
