--- a/users/templates/pages/auctions_oversight.html
+++ b/users/templates/pages/auctions_oversight.html
@@ -134,7 +134,7 @@
                     <p><strong>Ends:</strong> {{ auction.end_date }}</p>
                     <p>
                         <strong>Seller:</strong> 
-                        <a href="{% url 'user_details' auction.seller.id %}" class="seller-link">
+                        <a style="color: black;" href="{% url 'user_details' auction.seller.id %}" class="seller-link">
                             {{ auction.seller.username }}
                         </a>
                     </p>
